# cv-project-pedestrian-detector

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_app.py
src/pedblock/: __main__.py  app.py
src/pedblock/core/: __init__.py  annotate.py  auto_roi.py  camera_calib.py  config.py  danger_zone.py  detector.py  events.py  processor.py  road_area.py  roi.py  types.py  video_io.py  yolo_ultralytics.py
src/pedblock/core/auto_roi/: __init__.py  api.py  impl.py  models.py
src/pedblock/core/camera_calib/: __init__.py  io.py  models.py  paths.py  transform.py
src/pedblock/core/processor/: __init__.py  control.py  models.py  protocols.py  runner.py  video_processor.py
src/pedblock/core/road_area/: __init__.py  api.py  corridor.py  danger_zone.py  fallback.py  models.py  refine.py
src/pedblock/ui/: __init__.py  main_window.py  perspective_calib_dialog.py  preview_panel.py  sidebar.py
src/pedestrian_blocker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
