[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pedestrian-blocker"
version = "0.1.0"
description = "CustomTkinter app for detecting pedestrians that obstruct a car in dashcam videos (YOLO)."
requires-python = ">=3.14"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Artem Chernov" }]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


